<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="welcome">Bienvenue</string>

    <string name="menu_cycle">Cycle de vie</string>
    <string name="menu_save">Sauvegarde</string>
    <string name="menu_webservices">Webservices</string>

    <string name="logout">Se déconnecter</string>

    <string name="menu_permissions">Permissions</string>

    <string name="title_activity_login">Connexion</string>

    <string name="action_login">Se connecter</string>

    <string name="remember">Se souvenir de moi</string>

    <string name="prompt_username">Identifiant</string>

    <string name="prompt_password">Mot de passe</string>

    <string name="prompt_failed_login">Mauvais identifiant ou mot de passe</string>
    <string name="formulaire">Formulaire</string>
    <string name="button">Button</string>
    <string name="date">date</string>
    <string name="nom">Nom</string>
    <string name="name">name</string>
    <string name="firstname">firstname</string>
    <string name="acces_aux_informations_android" />
    <string name="buton_camera" />
    <string name="contact_Emma" />
    <string name="Acces_aux_informations">Accès aux informations</string>
    <string name="Contact_de_Emma">Contact de Emma COURREGES</string>
    <string name="menu_contact">Contacts</string>
    <string name="test_ok">Test OK</string>
    <string name="todo">TODO</string>
    <string name="titre">Accès aux Contacts</string>
    <string name="cycle_de_vie_titre">"Cycle de vie "</string>
    <string name="contactname">contactName</string>
    <string name="titleWebActivity">titleWebActivity</string>
    <string name="retour">retour</string>
    <string name="generate">generate</string>
    <string name="Name">Name</string>
    <string name="Address">Address</string>
    <string name="Email">Email</string>
    <string name="titreWeb">WebSERVICE</string>
    <string name="label_device_address">label_device_address</string>
    <string name="label_device_name">label_device_name</string>
    <string name="label_device_rssi">label_device_rssi</string>
    <string name="label_device_serialnumber">label_device_serialnumber</string>
    <string name="label_device_uuids">label_device_uuids</string>
    <string name="label_major">label_major</string>
    <string name="edit_major">edit_major</string>
    <string name="label_minor">label_minor</string>
    <string name="edit_minor">edit_minor</string>
    <string name="activate">activate</string>
    <string name="ecriture">Ecriture</string>
    <string name="lecture">lecture</string>
    <string name="notifier">notifier</string>
    <string name="lancer_le_scan_ble">Scanner BLE</string>
    <string name="bluetooth_button">BLE</string>
    <string name="telephone_non_compatible_avec_le_ble">ERREUR : Non Compatible</string>
    <string name="textview">NAME</string>
    <string name="en_attente_de_connexion">Please wait</string>
    <string name="red">test</string>
    <string name="_00">rssi</string>
    <string name="example">name</string>
    <string name="_lecture">Lecture</string>
    <string name="ecrire">Ecrire</string>
    <string name="acc_s_g_n_rique">risque</string>
    <string name="entrez_une_valeur">Entrer Valeur</string>
    <string name="scanning" />
    <string name="start_scan" />
    <string name="dateOfBirth">dateOfBirth</string>
    <string name="BLE">BLE</string>
    <string name="Naissance">Naissance</string>

</resources>
