<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cycleImg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="76dp"
        android:background="#86D1A8A5"
        app:layout_constraintBottom_toBottomOf="@+id/saveImg"
        app:layout_constraintEnd_toStartOf="@+id/saveImg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
        app:srcCompat="@android:drawable/ic_menu_rotate"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/webImg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        android:background="#B78283"
        android:contentDescription="@string/menu_webservices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@android:drawable/stat_sys_upload"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/permImg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:background="#CBC59695"
        app:layout_constraintBottom_toTopOf="@+id/bleImg"
        app:layout_constraintEnd_toStartOf="@+id/webImg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_my_calendar"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/bleImg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="#B78283"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
        app:layout_constraintVertical_bias="0.818"
        app:srcCompat="@android:drawable/ic_menu_always_landscape_portrait"
        tools:ignore="VectorDrawableCompat"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/saveImg"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="72dp"
        android:background="#ADC59695"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView"
        app:srcCompat="@android:drawable/ic_menu_save"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/menu_cycle"
        app:layout_constraintEnd_toEndOf="@+id/cycleImg"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="@+id/cycleImg"
        app:layout_constraintTop_toBottomOf="@+id/cycleImg" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/menu_save"
        app:layout_constraintEnd_toEndOf="@+id/saveImg"
        app:layout_constraintStart_toStartOf="@+id/saveImg"
        app:layout_constraintTop_toBottomOf="@+id/saveImg" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/menu_contact"
        app:layout_constraintEnd_toEndOf="@+id/permImg"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@+id/permImg"
        app:layout_constraintTop_toBottomOf="@+id/permImg" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/menu_webservices"
        app:layout_constraintEnd_toEndOf="@+id/webImg"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/webImg"
        app:layout_constraintTop_toBottomOf="@+id/webImg" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="casual"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/BLE"
        app:layout_constraintBottom_toTopOf="@+id/logoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bleImg"
        app:layout_constraintVertical_bias="0.019" />

</androidx.constraintlayout.widget.ConstraintLayout>