<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="409dp"
        android:layout_height="452dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="174dp"
        android:layout_height="24dp"
        android:text="@string/label_device_address"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        app:layout_constraintTop_toTopOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/device_name_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/device_rssi_details"
        app:layout_constraintTop_toTopOf="@+id/recyclerView"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/device_rssi_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.336"
        tools:layout_editor_absoluteX="-2dp" />

    <TextView
        android:id="@+id/device_serialnumber_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/device_rssi_details"
        app:layout_constraintVertical_bias="0.132"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/device_uuids_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/device_serialnumber_details"
        app:layout_constraintVertical_bias="0.15"
        tools:layout_editor_absoluteX="-2dp" />

    <Button
        android:id="@+id/edit_buttonlecture"
        android:layout_width="126dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:text="@string/lecture"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_uuids_details"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/edit_buttonnotifier"
        android:layout_width="126dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:text="@string/notifier"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_uuids_details"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/edit_buttonecriture"
        android:layout_width="126dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:text="@string/ecriture"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.024"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/device_uuids_details"
        app:layout_constraintVertical_bias="0.69" />


</androidx.constraintlayout.widget.ConstraintLayout>
